Added progress bar to fitting kernel

--- a/ngtsfit/Makefile
+++ b/ngtsfit/Makefile
@@ -1,15 +1,15 @@
 cc=nvcc
-FLAGS= -O3 -Xcompiler -fpic 
+FLAGS= -O3 -Xcompiler -fpic  --default-stream per-thread
 SHARED_OBJECTS = ../lib
 
 all : ngtsfit
 
 ngtsfit : ngtsfit.cu loglike_functions.o
-	${cc} ${FLAGS} ${SHARED_OBJECTS}/*.o ngtsfit.cu loglike_functions.o -o ngtsfit
+	${cc} ${FLAGS}  ${SHARED_OBJECTS}/*.o ngtsfit.cu loglike_functions.o -o ngtsfit
 	rm *.o
 
 loglike_functions.o : loglike_functions.cu
-	${cc} ${CUDALC}/*.o loglike_functions.cu -dc
+	${cc} --default-stream per-thread ${CUDALC}/*.o loglike_functions.cu -dc
 
 clean:
 	rm *.o
