--- a/ngtsfit/Makefile
+++ b/ngtsfit/Makefile
@@ -1,11 +1,11 @@
 cc=nvcc
-FLAGS= -O3 -Xcompiler -fpic  --default-stream per-thread  -Xptxas -O3
+FLAGS= -O3 -Xcompiler -fpic --default-stream per-thread  -Xptxas -O3
 SHARED_OBJECTS = ../lib
 
 all : ngtsfit
 
 ngtsfit : ngtsfit.cu loglike_functions.o
-	${cc} ${FLAGS}  ${SHARED_OBJECTS}/*.o ngtsfit.cu loglike_functions.o -o ngtsfit
+	${cc} ${FLAGS} -Xcompiler -fopenmp  ${SHARED_OBJECTS}/*.o ngtsfit.cu loglike_functions.o -o ngtsfit
 	rm *.o
 
 loglike_functions.o : loglike_functions.cu
